tests/negative/test_expr_addrof_data_non_ref.orb
data Foo { x:i32 };

fnc foo() Foo {
    let f:Foo;
    ret f;
};

fnc main() () {
    & (foo);
};